minor errors fixed, add styles to the scrollbar, and add fun conffeti

--- a/app/index.css
+++ b/app/index.css
@@ -11,3 +11,11 @@
         clip-path: polygon(100% 0, 100% 100%, 80% 100%, 0 0);
     }
  }
+
+ html{
+    height: --webkit-fill-available;
+ }
+
+ body{
+    height: --webkit-fill-available;
+ }
